restored fstree panel for stager local filesystem
