# pkg/swagger/server/restapi/operations/get_dir_responses.go
@@ -58,94 +58,6 @@ func (o *GetDirOK) WriteResponse(rw http.ResponseWriter, producer runtime.Produc
 	}
 }
 
-// GetDirBadRequestCode is the HTTP code returned for type GetDirBadRequest
-const GetDirBadRequestCode int = 400
-
-/*
-GetDirBadRequest bad request
-
-swagger:response getDirBadRequest
-*/
-type GetDirBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ResponseBody400 `json:"body,omitempty"`
-}
-
-// NewGetDirBadRequest creates GetDirBadRequest with default headers values
-func NewGetDirBadRequest() *GetDirBadRequest {
-
-	return &GetDirBadRequest{}
-}
-
-// WithPayload adds the payload to the get dir bad request response
-func (o *GetDirBadRequest) WithPayload(payload *models.ResponseBody400) *GetDirBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get dir bad request response
-func (o *GetDirBadRequest) SetPayload(payload *models.ResponseBody400) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetDirBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetDirNotFoundCode is the HTTP code returned for type GetDirNotFound
-const GetDirNotFoundCode int = 404
-
-/*
-GetDirNotFound path not found
-
-swagger:response getDirNotFound
-*/
-type GetDirNotFound struct {
-
-	/*
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewGetDirNotFound creates GetDirNotFound with default headers values
-func NewGetDirNotFound() *GetDirNotFound {
-
-	return &GetDirNotFound{}
-}
-
-// WithPayload adds the payload to the get dir not found response
-func (o *GetDirNotFound) WithPayload(payload string) *GetDirNotFound {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get dir not found response
-func (o *GetDirNotFound) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetDirNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(404)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
 // GetDirInternalServerErrorCode is the HTTP code returned for type GetDirInternalServerError
 const GetDirInternalServerErrorCode int = 500
 
